--- a/index.html
+++ b/index.html
@@ -12,8 +12,24 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/title.css">
     <link rel="stylesheet" href="css/body.css">
+    <link rel="stylesheet" href="css/main-section.css">
+    <link rel="stylesheet" href="css/subtitle.css">
+    <link rel="stylesheet" href="css/radio.css">
 </head>
 <body>
     <h1 class="title">Pokedex</h1>
+    <h2 class="subtitle">Quem é esse pokemon ?</h2>
+    <section class="main-section">
+
+    <div>
+        <img src="img/pikachu.PNG" alt=""><br>
+
+        <input type="radio" name="opção1" id="">1<br>
+        <input type="radio" name="opção2" id="">2<br>
+        <input class="radio" type="radio" name="opção3" id="">3
+    </div>
+
+    </section>
+    <footer>Erick Borel</footer>
 </body>
 </html>
