creating (pokemon) objects

--- a/index.html
+++ b/index.html
@@ -15,21 +15,28 @@
     <link rel="stylesheet" href="css/main-section.css">
     <link rel="stylesheet" href="css/subtitle.css">
     <link rel="stylesheet" href="css/radio.css">
+    <link rel="stylesheet" href="css/button.css">
 </head>
 <body>
     <h1 class="title">Pokedex</h1>
     <h2 class="subtitle">Quem é esse pokemon ?</h2>
+    <input onclick="iniciar()" class="button" type="button" value="Começar">
     <section class="main-section">
 
-    <div>
-        <img src="img/pikachu.PNG" alt=""><br>
+    <div id="quest">
 
+        <br>
+    
+    </div>    
+    <div>    
         <input type="radio" name="opção1" id="">1<br>
         <input type="radio" name="opção2" id="">2<br>
-        <input class="radio" type="radio" name="opção3" id="">3
+        <input class="radio" type="radio" name="opção3" id="">3<br>
+        <input class="button" type="button" value="Comfirmar">
     </div>
 
     </section>
     <footer>Erick Borel</footer>
+    <script src="script.js"></script>
 </body>
 </html>
